--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 Source/ThirdParty/Models/midas_1x384x384xBGRxByte.onnx
+
+Content/Geometry/*
+Content/ThirdPersonBP/*
+Content/Mannequin/*
+Content/ThirdPerson/*
