Fix references for UE5

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,7 @@ Content/Geometry/*
 Content/ThirdPersonBP/*
 Content/Mannequin/*
 Content/ThirdPerson/*
+Content/Characters/*
+Content/LevelPrototyping/*
+Content/__ExternalObjects__/*
+Content/__ExternalActors__/*
